# cpp-course

./: README.md
big_integer/: .directory  CMakeLists.txt  big_integer.h  big_integer_testing  cmake_install.cmake  cov.info
big_integer/htmlshiit/: index-sort-f.html  index-sort-l.html
big_integer/htmlshiit/bigint/: big_integer.cpp.func-sort-c.html  big_integer.cpp.func.html  big_integer.h.func.html  big_integer_testing.cpp.func-sort-c.html  index-sort-f.html
bigint/: CMakeCache.txt  Makefile  big_integer.cpp  big_integer_testing  big_integer_testing.cpp  cmake_install.cmake  cov.info
bigint/SOURCES/: CMakeLists.txt  CMakeSettings.json  big_integer.cpp  big_integer.h  big_integer_testing.cpp
bigint/SOURCES/gtest/: gtest-all.cc  gtest_main.cc
bigint/SOURCES/vector/: vector.cpp  vector.h
bigint/htmlshiit/: index-sort-f.html  index-sort-l.html  index.html
bigint/htmlshiit/bigint/: big_integer.cpp.func-sort-c.html  big_integer.cpp.func.html  big_integer.cpp.gcov.html  big_integer.h.func-sort-c.html  big_integer.h.func.html  big_integer.h.gcov.html  big_integer_testing.cpp.func-sort-c.html  big_integer_testing.cpp.func.html  big_integer_testing.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
bigint/htmlshiit/bigint/gtest/: gtest.h.func.html  (+11 more)
helloasm/: CMakeLists.txt  mul  mul.asm  sub  sub.asm
tmp/: a.out  cov.info  kek.cpp  kek.gcda  kek.gcno
tmp/htmlshiit/: index-sort-f.html  index-sort-l.html  index.html
tmp/htmlshiit/tmp/: index-sort-f.html  index-sort-l.html  index.html  kek.cpp.func-sort-c.html  kek.cpp.func.html  kek.cpp.gcov.html
(+7 files in other folders)
